c++/NativeLog.txt
---------------------------------------------------------------------
BD Software STL Message Decryptor v3.10 for gcc 2/3/4
---------------------------------------------------------------------
Command line: '/hdr:m /cand:s /iter:L'
banner = N
break_algorithm = D
comma_wrap = B
close_wrap = Y
output_width = 200
tabsize = 4
advise_re_policy_opts = 1
reformat_linenumbers = 0
wrap_own_msgs = 0
header_policy = M
with_policy = S
headers_to_show = 1
candidate_policy = S
pathname_policy = S
show_backtraces = Y
---------------------------------------------------------------------
Native input follows:
---------------------------------------------------------------------

Raw unprocessed input line:
include/seqan/python/infix.h:53:70: error: expected ‘(’ before ‘>’ token



The line at the point of the error was:
include/seqan/python/infix.h:53:70: error: expected ‘(’ before ‘>’ token

                                                                      ^

Nesting key: 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1

STL Decryptor ERROR: the char '>' (position 70) DOESN'T MATCH DELIMITER '('!
include/seqan/python/infix.h:59:10: error: ‘check_equal_by_position’ was not declared in this scope
include/seqan/python/infix.h:59:70: error: expected ‘(’ before ‘>’ token

The line at the point of the error was:
include/seqan/python/infix.h:59:70: error: expected ‘(’ before ‘>’ token

                                                                      ^

Nesting key: 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1

STL Decryptor ERROR: the char '>' (position 70) DOESN'T MATCH DELIMITER '('!
In file included from src/python_seqan.cpp:9:0:
include/seqan/python/string.h: In static member function ‘static void seqan::python::string_exposer<TValue, TSpec>::expose()’:
include/seqan/python/string.h:66:46: error: ‘exposed_type’ was not declared in this scope
